# raylib-snake

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.cpp
src/: board.cpp  board.h  direction.h  food.cpp  food.h  game.cpp  game.h  raylibExtra.h  settings.h  snake.cpp  snake.h  utils.h
src/food/: food.cpp  food.h  foodContainer.cpp  foodContainer.h
src/gui/: button.cpp  button.h  events.h  gui.cpp  gui.h  popup.cpp  popup.h
src/levels/: level.h  levelGenerator.cpp  levelGenerator.h  levels.h  standardLevel.cpp  standardLevel.h
